--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                      <div class="col-md-5 center-item">
                         <div class="input-group number-spinner">
                            <button class="btn btn-default"><i class="fas fa-minus"></i></button>
-                           <input type="text" class="form-control text-center" value="1">
-                           <button class="btn btn-default"><i class="fas fa-plus"></i></button>
+                           <input id="noOfPhone" type="text" class="form-control text-center" value="1">
+                           <button  class="btn btn-default"><i id="plus-1" class="fas fa-plus"></i></button>
                         </div>
                         <h5>$1219</h5>
                         <img src="images/remove.png" alt="" class="remove-item">
@@ -77,6 +77,23 @@
          </div>
       </div>
    </section>
+   <script>
+      //plus button handelar
+      const plusBtn=document.getElementById("plus-1");
+      plusBtn.addEventListener("click",function(){
+         let noOfPhone=document.getElementById("noOfPhone").value// id="noOfPhone" for imput
+         let noOfPhoneNumber=parseFloat(noOfPhone);
+         let addPhone=noOfPhoneNumber+1;
+         noOfPhone=addPhone;
+         document.getElementById("noOfPhone").innerText=noOfPhone;
+         console.log("no:",noOfPhone)
+         
+      })
+
+
+
+
+   </script>
 </body>
 
 </html>
